--- a/src/SupplyChain.App.MDCSkuAssign/SupplyChain.App.MDCSkuAssign.csproj
+++ b/src/SupplyChain.App.MDCSkuAssign/SupplyChain.App.MDCSkuAssign.csproj
@@ -5,6 +5,8 @@
     <ApplicationIcon />
     <OutputType>Exe</OutputType>
     <StartupObject />
+    <Version>2.0.0</Version>
+    <Copyright>@GameStop Copyright Protected.</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
